@@ -1,5 +1,5 @@
 /*
- * "$Id: dirsvc.c,v 1.73.2.43 2003/10/09 19:30:20 mike Exp $"
+ * "$Id: dirsvc.c,v 1.73.2.44 2003/10/22 14:42:54 mike Exp $"
  *
  *   Directory services routines for the Common UNIX Printing System (CUPS).
  *
@@ -815,6 +815,8 @@ StartBrowsing(void)
 
     FD_SET(BrowseSocket, InputSet);
   }
+  else
+    BrowseSocket = -1;
 
 #ifdef HAVE_LIBSLP
   if (BrowseProtocols & BROWSE_SLP)
@@ -1040,7 +1042,7 @@ StopBrowsing(void)
         	 BrowseSocket);
 
       FD_CLR(BrowseSocket, InputSet);
-      BrowseSocket = 0;
+      BrowseSocket = -1;
     }
   }
 
@@ -1941,5 +1943,5 @@ UpdateSLPBrowse(void)
 
 
 /*
- * End of "$Id: dirsvc.c,v 1.73.2.43 2003/10/09 19:30:20 mike Exp $".
+ * End of "$Id: dirsvc.c,v 1.73.2.44 2003/10/22 14:42:54 mike Exp $".
  */
